# UAV_obstacle_avoidance

./: .gitignore  CMakeLists.txt  README.md  file_test1.csv  file_test2.csv  package.xml  pipeline.md  plugins.xml
config/: camera_positions.yaml  cameras_roi.yaml  general.yaml
config/camera_calibrations/: basler_left.yaml  basler_right.yaml
documents/: 1.000000_plane_distance.csv  1.000000_plane_pts_distance.csv  1.000000_rms_repro_err.csv  1.000000_total_repro_err.csv  1.500000_plane_distance.csv  1.500000_plane_pts_distance.csv  1.500000_rms_repro_err.csv  1.500000_total_repro_err.csv  1_5_plane_distance.csv  1_5_total_repro_err.csv  1_total_repro_err.csv  2.000000_plane_distance.csv  2.000000_plane_pts_distance.csv  2.000000_rms_repro_err.csv  2.000000_total_repro_err.csv  2.500000_plane_distance.csv  2.500000_plane_pts_distance.csv  2.500000_rms_repro_err.csv  2.500000_total_repro_err.csv  2_5_plane_distance.csv  2_5_plane_pts_distance.csv  2_5_rms_repro_err.csv  2_5_total_repro_err.csv  2_plane_pts_distance.csv  3.000000_plane_distance.csv  3.000000_plane_pts_distance.csv  3.000000_rms_repro_err.csv  3.000000_total_repro_err.csv  3.500000_plane_distance.csv  3.500000_plane_pts_distance.csv  3.500000_rms_repro_err.csv  3.500000_total_repro_err.csv  3_5_plane_distance.csv  3_5_plane_pts_distance.csv  3_5_rms_repro_err.csv  3_5_total_repro_err.csv  3_plane_distance.csv  3_rms_repro_err.csv  4.000000_plane_distance.csv  4.000000_plane_pts_distance.csv  (+38 more)
experiment_estimate_plane/: 1.0_plane_distance.csv  1.0_plane_pts_distance.csv  1.0_rms_repro_err.csv  1.0_total_repro_err.csv  1.5_plane_distance.csv  1.5_plane_pts_distance.csv  1.5_rms_repro_err.csv  1.5_total_repro_err.csv  2.0_plane_distance.csv  2.0_plane_pts_distance.csv  2.0_rms_repro_err.csv  2.0_total_repro_err.csv  2.5_plane_distance.csv  2.5_plane_pts_distance.csv  2.5_rms_repro_err.csv  2.5_total_repro_err.csv  3.0_plane_distance.csv  3.0_plane_pts_distance.csv  3.0_rms_repro_err.csv  3.0_total_repro_err.csv  3.5_plane_distance.csv  3.5_plane_pts_distance.csv  3.5_rms_repro_err.csv  3.5_total_repro_err.csv  4.0_plane_distance.csv  4.0_plane_pts_distance.csv  4.0_rms_repro_err.csv  4.0_total_repro_err.csv  4.5_plane_distance.csv  4.5_plane_pts_distance.csv  4.5_rms_repro_err.csv  4.5_total_repro_err.csv  5.0_plane_distance.csv  5.0_plane_pts_distance.csv  5.0_rms_repro_err.csv  5.0_total_repro_err.csv
experiment_given_plane/: 1.0_plane_pts_distance.csv  1.0_rms_repro_err.csv  1.0_total_repro_err.csv  1.5_plane_pts_distance.csv  1.5_rms_repro_err.csv  1.5_total_repro_err.csv  2.0_plane_pts_distance.csv  2.0_rms_repro_err.csv  2.0_total_repro_err.csv  2.5_plane_pts_distance.csv  2.5_rms_repro_err.csv  2.5_total_repro_err.csv  3.0_plane_pts_distance.csv  3.0_rms_repro_err.csv  3.0_total_repro_err.csv  3.5_plane_pts_distance.csv  3.5_rms_repro_err.csv  3.5_total_repro_err.csv  4.0_plane_pts_distance.csv  4.0_rms_repro_err.csv  4.0_total_repro_err.csv  4.5_plane_pts_distance.csv  4.5_rms_repro_err.csv  4.5_total_repro_err.csv  5.0_plane_pts_distance.csv  5.0_rms_repro_err.csv  5.0_total_repro_err.csv  5.5_plane_pts_distance.csv  5.5_rms_repro_err.csv  5.5_total_repro_err.csv  6.0_plane_pts_distance.csv  6.0_rms_repro_err.csv  6.0_total_repro_err.csv  6.5_plane_pts_distance.csv  6.5_rms_repro_err.csv  6.5_total_repro_err.csv  7.0_plane_pts_distance.csv  7.0_rms_repro_err.csv  7.0_total_repro_err.csv  7.5_plane_pts_distance.csv  (+5 more)
experiment_real/: 1_5_plane_pts_distance.csv  1_5_rms_repro_err.csv  1_plane_distance.csv  1_plane_pts_distance.csv  1_rms_repro_err.csv  2_plane_distance.csv  2_rms_repro_err.csv  2_total_repro_err.csv  3_5_plane_distance.csv  3_5_plane_pts_distance.csv  3_5_rms_repro_err.csv  3_5_total_repro_err.csv  3_plane_pts_distance.csv  3_total_repro_err.csv  4_5_plane_distance.csv  4_5_plane_pts_distance.csv  4_5_rms_repro_err.csv  4_5_total_repro_err.csv  4_plane_distance.csv  4_plane_pts_distance.csv  4_rms_repro_err.csv  4_total_repro_err.csv  5_plane_distance.csv  5_plane_pts_distance.csv  5_rms_repro_err.csv  5_total_repro_err.csv
include/: CameraLocalisation.h  CameraLocalization.h  Utils.h  barrier.hpp
launch/: uav_camera_localisation.launch  uav_camera_localization.launch
rviz/: device.rviz  simulation.rviz
scripts/: .gitignore  calibrate_camera.py  camera_calibration_plotting.py  change_uav.sh  correspondences.py  epipolar_line.py  find_rotation_translation.py  in_file_left.txt  in_file_right.txt  plot_error_camera_calibration.py  plot_errors.py  plot_statistics.py  publisher.py  undistort_K_D_img.py  undistort_full_K_D_img.py
scripts/hardware_trigger_arduino/: CMakeLists.txt  platformio.ini
scripts/hardware_trigger_arduino/src/: main.cpp
src/: CameraLocalisation.cpp  CameraLocalization.cpp  Utils.cpp
tmux_scripts/: .tmuxinator.yml  session.yml  session_sim.yml  simulation.sh
