<?xml version="1.0"?>
<package format="2">

  <name>uav_camera_localisation</name>
  <version>1.0.0</version>
  <description>more_desctription</description>

  <maintainer email="todo@email.com">todo_name</maintainer>
  <author email="todo@email.com">todo_name</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>cv_bridge</depend>
  <depend>basler_stereopair_driver</depend> <!-- https://github.com/Myralllka/UAV_basler_stereopair_driver -->
  <depend>pylon_camera</depend> <!--https://mrs.felk.cvut.cz/gitlab/uav/drivers/pylon-ros-camera/tree/sdk6.2.0-->
  <depend>apriltag_ros</depend> <!-- https://github.com/AprilRobotics/apriltag_ros -->

  <export>
    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
